[package]
name = "tl-async-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8"
crossbeam-channel = "0.5"
pin-project = "1.0"
mio = { version = "0.8", features = ["os-poll", "net"] }
chashmap = "2.2.2"
parking_lot = "0.12"
