[package]
name = "tl-async-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8"
crossbeam-channel = "0.5"
pin-project = "1.0"
mio = { version = "0.8", features = ["os-poll", "net"] }
chashmap = "2.2.2"
parking_lot = "0.12"
tokio = "1"
bytemuck = "1"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.0"
httpdate = "1.0"
once_cell = "1.5.2"
rand = "0.8.3"

tokio-util = { version = "0.7.0", features = ["full"] }
