[package]
name = "tl-async-runtime"
version = "0.1.2"
edition = "2021"
description = "A bad runtime impl for educational purposes only"
license = "MIT"
repository = "https://github.com/conradludgate/tl-async-runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8"
pin-project = "1.0"
mio = { version = "0.8", features = ["os-poll", "net"] }
chashmap = "2.2.2"
parking_lot = "0.12"
tokio = "1" # might be cheating. I'm using tokio's AsyncRead/Write traits and helpers

[dependencies.educe]
version = "*"
features = ["Default"]
default-features = false

[dev-dependencies]
bytes = "1.0.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.0"
httpdate = "1.0"

tokio-util = { version = "0.7.0", features = ["full"] }
